solve 100% shading isshue

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
         color: #f1f1f1;
       }
       .bg-shade {
+        min-height: 100%;
         background: rgba(0, 18, 41, 0.9);
         padding-top: 20px;
+        padding-bottom: 20px;
       }
     </style>
   </head>
@@ -44,7 +46,7 @@
     <div id="preloder">
       <div class="loader"></div>
     </div>
-    <div class="w-100 h-100 bg-shade">
+    <div class="bg-shade">
       <div class="container">
         <!-- Header section -->
         <header id="navbar-main">
