--- a/profile.html
+++ b/profile.html
@@ -34,6 +34,7 @@
         color: #f1f1f1;
       }
       .bg-shade {
+        min-height: 100%;
         background: rgba(0, 18, 41, 0.7);
         padding-top: 50px;
         padding-bottom: 50px;
