--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <section id="intro-main">
           <div class="row">
             <div class="col-md-6">
-              <h1 class="mt-5 mb-3">Proxy<span>Strike</span></h1>
+              <h1>Proxy<span>Strike</span></h1>
               <h4>A Quick & Easy Proxy For You.</h4>
               <p class="mt-5 mb-5">
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
