fix responsive issue in profile.html

--- a/profile.html
+++ b/profile.html
@@ -46,7 +46,7 @@
     <div id="preloder">
       <div class="loader"></div>
     </div>
-    <div class="w-100 h-100 bg-shade">
+    <div class="bg-shade">
       <div class="container">
         <!-- Header section -->
         <header>
