update payment method in the profile page

--- a/profile.html
+++ b/profile.html
@@ -75,7 +75,7 @@
               <h2>Jimmy Robins</h2>
               <p>Jimmy.robins@gmail.com</p>
               <div class="form-section">
-                <img src="img/visa-logo.png" alt="" />
+                <img src="img/stripe-element.png" alt="" width="40" />
                 <span class="input-divider">|</span>
                 <input type="text" placeholder="**** **** **** 9847" />
                 <button>Edit</button>
