--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
               </div>
             </div>
             <div class="col-md-6">
-              <img src="img/glob-home.png" class="img-fluid" alt="Our World!" />
+              <img
+                src="img/glob-home.png"
+                class="img-fluid img-glob"
+                alt="Our World!"
+              />
             </div>
           </div>
         </section>
