--- a/storage-plan.html
+++ b/storage-plan.html
@@ -73,7 +73,7 @@
               <hr />
               <p>25 Gigabytes / year</p>
               <h1 class="mb-1 mt-4">$250</h1>
-              <p class="mb-4"><small>Billed annually</small></p>
+              <p class="mb-4"><small>Billed Annually</small></p>
               <button class="pricing-button">Upgrade</button>
             </div>
           </div>
@@ -83,7 +83,7 @@
               <hr />
               <p>50 Gigabytes</p>
               <h1 class="mb-1 mt-4">$435</h1>
-              <p class="mb-4"><small>Billed annually</small></p>
+              <p class="mb-4"><small>Billed Annually</small></p>
               <button class="pricing-button pricing-button-current">
                 Current Plan
               </button>
@@ -95,7 +95,7 @@
               <hr />
               <p>100 Gigabytes / year</p>
               <h1 class="mb-1 mt-4">$590</h1>
-              <p class="mb-4"><small>Billed annually</small></p>
+              <p class="mb-4"><small>Billed Annually</small></p>
               <button class="pricing-button">Upgrade</button>
             </div>
           </div>
@@ -143,6 +143,15 @@
         </div>
       </section>
       <!-- end of pricing section -->
+
+      <!-- footer section -->
+      <section id="footer">
+        <p class="copyright">
+          <i class="far fa-copyright"></i> 2019 Proxy Strike. All rights
+          resereved.
+        </p>
+      </section>
+      <!-- end of footer section -->
     </div>
 
     <!--====== Javascripts & Jquery ======-->
