fix navbar header middle link issue

--- a/plan.html
+++ b/plan.html
@@ -69,7 +69,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mx-auto">
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="#"
                     >Home <span class="sr-only">(current)</span></a
@@ -99,7 +99,7 @@
 
         <!-- intro section -->
         <section id="intro-main" class="text-center">
-          <h3>Choose a Plan</h3>
+          <h3>Choose Any Plan!</h3>
           <p>
             Try for free for 30 days. No commitment. No credit card required.
           </p>
