add price plan change javascirpt functionality

--- a/plan.html
+++ b/plan.html
@@ -108,7 +108,7 @@
             <span id="switch"
               ><img src="img/toggle-switch.png" alt="" id="switch-image"
             /></span>
-            <span id="annual">Annual Billing</span>
+            <span id="annually">Annual Billing</span>
           </div>
         </section>
         <!-- end of intro section -->
@@ -121,9 +121,11 @@
                 <p class="mb-4 invisible"><small>RECOMMENDED</small></p>
                 <h5 class="mt-2">STARTER</h5>
                 <hr />
-                <p>2 Gigabytes / month</p>
-                <h1 class="mb-1 mt-4">$32</h1>
-                <p class="mb-4"><small>Billed Monthly</small></p>
+                <p id="starter-usage">2 Gigabytes / month</p>
+                <h1 class="mb-1 mt-4" id="starter-amount">$32</h1>
+                <p class="mb-4">
+                  <small class="billed">Billed Monthly</small>
+                </p>
                 <button class="pricing-button-transparent">Purchase</button>
               </div>
             </div>
@@ -134,9 +136,9 @@
                 <p class="mb-4"><small class="text-blue">RECOMMENDED</small></p>
                 <h5 class="mt-2">GROWTH</h5>
                 <hr />
-                <p>5 Gigabytes / month</p>
-                <h1 class="mb-1 mt-4">$68</h1>
-                <p class="mb-4"><small>Billed Monthly</small></p>
+                <p id="growth-usage">5 Gigabytes / month</p>
+                <h1 class="mb-1 mt-4" id="growth-amount">$68</h1>
+                <p class="mb-4"><small class="billed">Billed Monthly</small></p>
                 <button class="pricing-button pricing-button-current">
                   Purchase
                 </button>
@@ -147,9 +149,9 @@
                 <p class="mb-4 invisible"><small>RECOMMENDED</small></p>
                 <h5 class="mt-2">PRO</h5>
                 <hr />
-                <p>10 Gigabytes / month</p>
-                <h1 class="mb-1 mt-4">$112</h1>
-                <p class="mb-4"><small>Billed Monthly</small></p>
+                <p id="pro-usage">10 Gigabytes / month</p>
+                <h1 class="mb-1 mt-4" id="pro-amount">$112</h1>
+                <p class="mb-4"><small class="billed">Billed Monthly</small></p>
                 <button class="pricing-button-transparent">Purchase</button>
               </div>
             </div>
