remove plan pricing method selection

--- a/plan-extended.html
+++ b/plan-extended.html
@@ -100,6 +100,16 @@
         <!-- intro section -->
         <section id="intro-main" class="text-center">
           <h3>Choose Any Plan!</h3>
+          <p>
+            Try for free for 30 days. No commitment. No credit card required.
+          </p>
+          <div class="billing-method">
+            <span id="monthly">Monthly Billing</span>
+            <span id="switch"
+              ><img src="img/toggle-switch.png" alt="" id="switch-image"
+            /></span>
+            <span id="annually">Annual Billing</span>
+          </div>
         </section>
         <!-- end of intro section -->
 
