change plan pricing ui color

--- a/plan.html
+++ b/plan.html
@@ -128,7 +128,9 @@
                 <hr />
                 <p id="growth-usage">5 Gigabytes / month</p>
                 <h1 class="mb-1 mt-4" id="growth-amount">$68</h1>
-                <p class="mb-4"><small class="billed">Billed Monthly</small></p>
+                <p class="mb-4">
+                  <small class="billed text-blue">Billed Monthly</small>
+                </p>
                 <button class="pricing-button pricing-button-current">
                   Purchase
                 </button>
