--- a/dashboard-extended.html
+++ b/dashboard-extended.html
@@ -74,7 +74,11 @@
             <form>
               <div class="form-group">
                 <label for="inputLocation">Location</label>
-                <select class="form-control" id="inputLocation">
+                <select
+                  class="form-control"
+                  id="inputLocation"
+                  aria-describedby="locationHelp"
+                >
                   <option>USA</option>
                   <option>Canada</option>
                   <option>GB</option>
@@ -84,6 +88,9 @@
                   <option>Houston</option>
                   <option>Miami</option>
                 </select>
+                <small id="locationHelp" class="form-text text-muted">
+                  We don't share your location with anyone.
+                </small>
               </div>
               <div class="form-group">
                 <label for="inputQuantity">Quantity</label>
@@ -92,12 +99,17 @@
                   min="1"
                   class="form-control"
                   id="inputQuantity"
+                  aria-describedby="quantityHelp"
                   placeholder="# of Proxies"
                 />
+                <small id="quantityHelp" class="form-text text-muted">
+                  Enter the number of Proxies you want to generate.
+                </small>
               </div>
               <button class="w-100 btn-big-100 mt-4">Generate</button>
             </form>
-            <button class="mt-5 w-100 btn-big-100">Upgrade Storage</button>
+            <p class="mt-5"><small>Upgrade</small></p>
+            <button class="w-100 btn-big-100">Upgrade Storage</button>
             <p class="mt-4 logout-text text-blue">
               <i class="fas fa-external-link-alt"></i> &nbsp;LOGOUT
             </p>
