add support page

--- a/dashboard.html
+++ b/dashboard.html
@@ -108,7 +108,7 @@
               <button class="btn btn-outline-danger btn-sm">Delete All</button>
               <button class="btn btn-outline-info btn-sm">Copy All</button>
             </div>
-            <div class="proxies-holder">
+            <div>
               <ul class="list-proxies">
                 <li>
                   95.216.63.238:10001:aoxt6o:tgthyi
