fix support page background issue

--- a/support.html
+++ b/support.html
@@ -30,12 +30,13 @@
 
     <style>
       body {
-        background: #001229 url("img/bg_star_galaxy.png") no-repeat;
+        background: #001229 url("img/bg_world_flat.png") repeat;
+        background-size: cover;
         color: #f1f1f1;
       }
       .bg-shade {
         min-height: 100%;
-        background: rgba(0, 18, 41, 0.9);
+        background: rgba(0, 18, 41, 0.6);
         padding-top: 20px;
         padding-bottom: 20px;
       }
