fix the dot UI issue in storage-plan page

--- a/storage-plan.html
+++ b/storage-plan.html
@@ -111,29 +111,19 @@
             <h1>8.210 <span class="text-sm">GB</span></h1>
           </div>
           <div class="col-lg-6 col-md-8 col-mb">
-            <div class="dot-progress">
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-blue"></i>
-              <i class="fas fa-circle text-gray"></i>
-              <i class="fas fa-circle text-gray"></i>
-              <i class="fas fa-circle text-gray"></i>
-              <i class="fas fa-circle text-gray"></i>
-              <i class="fas fa-circle text-gray"></i>
-              <i class="fas fa-circle text-gray"></i>
-              <i class="fas fa-circle text-gray"></i>
+            <div class="row dot-progress">
+              <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
+              <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
+              <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
+              <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
+              <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
+              <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
+              <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
+              <div class="col-1"><i class="fas fa-circle text-blue"></i></div>
+              <div class="col-1"><i class="fas fa-circle text-gray"></i></div>
+              <div class="col-1"><i class="fas fa-circle text-gray"></i></div>
+              <div class="col-1"><i class="fas fa-circle text-gray"></i></div>
+              <div class="col-1"><i class="fas fa-circle text-gray"></i></div>
             </div>
           </div>
           <div class="col-lg-3 col-md-2 col-mb text-right">
