add storage meter circular progressbar in dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -43,6 +43,16 @@
     <div id="preloder">
       <div class="loader"></div>
     </div>
+    <!-- end of Page Preloader -->
+
+    <!-- circular progressbar for the storage meter -->
+    <div id="circular-progressbar">
+      <div class="round" data-value="0.87" data-size="100" data-thickness="5">
+        <strong></strong>
+        <p>GB</p>
+      </div>
+    </div>
+    <!-- end of circular progressbar for the storage meter -->
 
     <div class="container">
       <!-- Header section -->
@@ -219,6 +229,7 @@
 
     <!--====== Javascripts & Jquery ======-->
     <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/circle-progress.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
   </body>
