--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
     <div class="bg-shade">
       <div class="container">
         <!-- input from section -->
-        <section id="input-form" class="mt-4">
+        <section id="input-form">
           <div class="row bg-glob">
             <div class="col-md-6 offset-md-3">
               <img src="img/logo.png" alt="ProxyStrike" width="30" />
@@ -81,6 +81,15 @@
           </div>
         </section>
         <!-- end of input form section -->
+
+        <!-- footer section -->
+        <section id="footer">
+          <p class="copyright mt-4">
+            <i class="far fa-copyright"></i> 2019 Proxy Strike. All rights
+            resereved.
+          </p>
+        </section>
+        <!-- end of footer section -->
       </div>
     </div>
 
