remove unused pages and fix links

--- a/dashboard.html
+++ b/dashboard.html
@@ -67,8 +67,8 @@
           </div>
           <div class="col-sm-4 text-center"></div>
           <div class="col-sm-4 text-right">
-            <a href="#" class="header-nav-link profile-link">
-              <i class="fas fa-user text-blue"></i> &nbsp; Profile
+            <a href="profile.html" class="header-nav-link profile-link">
+              <i class="fas fa-user"></i> &nbsp; Profile
             </a>
           </div>
         </div>
