--- a/profile.html
+++ b/profile.html
@@ -52,7 +52,10 @@
         <header>
           <div class="row">
             <div class="col-4">
-              <a href="#" class="header-nav-link header-nav-link-button">
+              <a
+                href="dashboard.html"
+                class="header-nav-link header-nav-link-button"
+              >
                 <i class="fas fa-chevron-left"></i> &nbsp;
                 <span class="button-collapse">Back to Dashboard</span>
               </a>
