--- a/storage-plan.html
+++ b/storage-plan.html
@@ -56,7 +56,7 @@
             <h4 class="header-title">Storage Plans</h4>
           </div>
           <div class="col-sm-4 text-right">
-            <a href="#" class="header-nav-link">
+            <a href="dashboard.html" class="header-nav-link">
               <i class="fas fa-chevron-left"></i> &nbsp; Back to Dashboard
             </a>
           </div>
