--- a/index.html
+++ b/index.html
@@ -71,23 +71,26 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#"
+                  <a class="nav-link" href="index.html"
                     >Home <span class="sr-only">(current)</span></a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Plans</a>
+                  <a class="nav-link" href="plan.html">Plans</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Support</a>
+                  <a class="nav-link" href="support.html">Support</a>
                 </li>
               </ul>
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Login</a>
+                  <a class="nav-link" href="login.html">Login</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #00baff;"
+                  <a
+                    class="nav-link"
+                    href="register.html"
+                    style="color: #00baff;"
                     >Sign Up</a
                   >
                 </li>
@@ -109,7 +112,7 @@
               </p>
               <div>
                 <a href="#" class="btn-small">Try Proxy</a>
-                <a href="#" class="btn-small-light">View Plans</a>
+                <a href="plan.html" class="btn-small-light">View Plans</a>
               </div>
             </div>
             <div class="col-md-6">
