--- a/plan.html
+++ b/plan.html
@@ -70,24 +70,27 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="#"
-                    >Home <span class="sr-only">(current)</span></a
+                  <a class="nav-link" href="plan.html"
+                    >Plans <span class="sr-only">(current)</span></a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Plans</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Support</a>
+                  <a class="nav-link" href="support.html">Support</a>
                 </li>
               </ul>
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Login</a>
+                  <a class="nav-link" href="login.html">Login</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #00baff;"
+                  <a
+                    class="nav-link"
+                    href="register.html"
+                    style="color: #00baff;"
                     >Sign Up</a
                   >
                 </li>
