add order select option

--- a/dashboard.html
+++ b/dashboard.html
@@ -114,7 +114,18 @@
           </div>
           <div class="col-md-8">
             <h3>Generated Proxies (562)</h3>
-            <div class="text-right mb-2">
+            <div class="mb-2 mt-4 text-right">
+              <!-- select order -->
+              <span class="text-muted">Order &nbsp;</span>
+              <div class="form-group d-inline-block">
+                <select class="form-control form-control-sm">
+                  <option>0676-3677-5244</option>
+                  <option>0676-3677-5998</option>
+                  <option>0676-3677-4651</option>
+                  <option>0676-3677-7386</option>
+                </select>
+              </div>
+              <!-- end of select order -->
               <button class="btn btn-outline-danger btn-sm">Delete All</button>
               <button class="btn btn-outline-info btn-sm">Copy All</button>
             </div>
