add order select and update proxies list funcitonality

--- a/dashboard.html
+++ b/dashboard.html
@@ -118,7 +118,7 @@
               <!-- select order -->
               <span class="text-muted">Order &nbsp;</span>
               <div class="form-group d-inline-block">
-                <select class="form-control form-control-sm">
+                <select class="form-control form-control-sm" id="selectOrder">
                   <option>0676-3677-5244</option>
                   <option>0676-3677-5998</option>
                   <option>0676-3677-4651</option>
@@ -130,6 +130,7 @@
               <button class="btn btn-outline-info btn-sm">Copy All</button>
             </div>
             <div>
+              <!-- see in the main.js to populate the list items from the order section -->
               <ul class="list-proxies">
                 <li>
                   95.216.63.238:10001:aoxt6o:tgthyi
