--- a/plan.html
+++ b/plan.html
@@ -201,6 +201,7 @@
                   <button id="addCard" class="pricing-button">
                     Add new card
                   </button>
+                  <!-- card-element section -->
                   <div id="card-element" class="mt-3">
                     <div class="form-row">
                       <div class="col-8">
@@ -239,6 +240,7 @@
                       </div>
                     </div>
                   </div>
+                  <!-- end of card-element section -->
                 </div>
                 <div class="modal-footer">
                   <button
@@ -307,6 +309,8 @@
     <!--====== Javascripts & Jquery ======-->
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
+    <script src="https://checkout.stripe.com/checkout.js"></script>
     <script src="js/main.js"></script>
 
     <script>
