add the link to the update storage button

--- a/dashboard.html
+++ b/dashboard.html
@@ -107,7 +107,11 @@
               </div>
               <button class="w-100 btn-big-100 mt-4">Generate</button>
             </form>
-            <button class="mt-5 w-100 btn-big-100">Upgrade Storage</button>
+            <a
+              href="storage-plan.html"
+              class="mt-5 d-block btn-big-100 text-center"
+              >Upgrade Storage</a
+            >
             <p class="mt-4 logout-text text-blue">
               <i class="fas fa-external-link-alt"></i> &nbsp;LOGOUT
             </p>
