--- a/plan.html
+++ b/plan.html
@@ -180,9 +180,11 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="confirmbody">
-                    Are you sure you want to purchase?
-                  </h5>
+                  <h4 class="modal-title text-left" id="confirmbody">
+                    Are you sure you want to purchase
+                    <span class="text-blue">5</span> gigabytes for
+                    <span class="text-blue">$68</span>?
+                  </h4>
                   <button
                     type="button"
                     class="close"
