--- a/login.html
+++ b/login.html
@@ -77,6 +77,11 @@
                 </div>
                 <button class="w-100 btn-big mt-4">Enter</button>
               </form>
+              <p id="signup-here" class="mt-3" style="font-size: 14px;">
+                Are you new to <span class="logo-proxy">Proxy</span
+                ><span class="logo-strike">Strike</span>?
+                <a href="register.html">Signup here</a>
+              </p>
             </div>
           </div>
         </section>
