--- a/register.html
+++ b/register.html
@@ -101,6 +101,11 @@
                 </div>
                 <button class="w-100 btn-big mt-4">Register</button>
               </form>
+              <p id="signup-here" class="mt-3" style="font-size: 14px;">
+                Already a member to <span class="logo-proxy">Proxy</span
+                ><span class="logo-strike">Strike</span>?
+                <a href="login.html">Login here</a>
+              </p>
             </div>
           </div>
         </section>
