--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="support.html">Support</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="dashboard.html">Dashboard</a>
+                </li>
               </ul>
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
