--- a/support.html
+++ b/support.html
@@ -82,6 +82,9 @@
                     >Support <span class="sr-only">(current)</span></a
                   >
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="dashboard.html">Dashboard</a>
+                </li>
               </ul>
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
